Added Testimonials section

--- a/index.html
+++ b/index.html
@@ -134,6 +134,7 @@
                   </div>
                   <h3 class="text-base font-bold md:mb-4 md:hidden">
                     Advanced built-in reports
+                  </h3>
                 </div>
               </div>
               <div>
@@ -141,9 +142,9 @@
                   Advanced built-in reports
                 </h3>
                 <p class="text-darkGrayishBlue">
-                    Set internal delivery estimates and track progress toward
-                    company goals. Our customisable dashboard helps you build out
-                    the reports you need to keep key stakeholders informed.
+                  Set internal delivery estimates and track progress toward
+                  company goals. Our customisable dashboard helps you build out
+                  the reports you need to keep key stakeholders informed.
                 </p>
               </div>
             </div>
@@ -163,19 +164,90 @@
                   </div>
                   <h3 class="text-base font-bold md:mb-4 md:hidden">
                     Everything you need in one place
+                  </h3>
                 </div>
               </div>
               <div>
                 <h3 class="mb-4 hidden text-lg font-bold md:block">
-                    Everything you need in one place
+                  Everything you need in one place
                 </h3>
                 <p class="text-darkGrayishBlue">
-                    Stop jumping from one service to another to communicate, store
-                    files, track tasks and share documents. Manage offers an
-                    all-in-one team productivity solution.
+                  Stop jumping from one service to another to communicate, store
+                  files, track tasks and share documents. Manage offers an
+                  all-in-one team productivity solution.
                 </p>
               </div>
             </div>
+          </div>
+        </div>
+      </section>
+
+      <!-- Testimonials -->
+      <section id="testimonials">
+        <!-- Container to heading and testm blocks -->
+        <div class="mx-auto mt-32 max-w-6xl px-5 text-center">
+          <!-- Heading -->
+          <h2 class="text-4xl font-bold">What's Different About Manage?</h2>
+          <!-- Testimonials container -->
+          <div
+            class="mt-24 flex flex-col space-y-12 md:flex-row md:space-y-0 md:space-x-6"
+          >
+            <!-- Testimonial 1 -->
+            <div
+              class="flex flex-col items-center space-y-6 rounded-lg bg-veryLightGray p-6 md:w-1/3"
+            >
+              <img
+                src="./img/avatar-anisha.png"
+                class="-mt-14 w-16"
+                alt="anisha"
+              />
+              <h5 class="text-lg font-bold capitalize">anisha li</h5>
+              <p class="text-sm text-darkGrayishBlue">
+                “Manage has supercharged our team’s workflow. The ability to
+                maintain visibility on larger milestones at all times keeps
+                everyone motivated.”
+              </p>
+            </div>
+            <!-- Testimonial 2 -->
+            <div
+              class="flex flex-col items-center space-y-6 rounded-lg bg-veryLightGray p-6 md:w-1/3"
+            >
+              <img
+                src="./img/avatar-ali.png"
+                class="-mt-14 w-16"
+                alt="anisha"
+              />
+              <h5 class="text-lg font-bold capitalize">ali bravo</h5>
+              <p class="text-sm text-darkGrayishBlue">
+                “We have been able to cancel so many other subscriptions since
+                using Manage. There is no more cross-channel confusion and
+                everyone is much more focused.”
+              </p>
+            </div>
+            <!-- Testimonial 3 -->
+            <div
+              class="flex flex-col items-center space-y-6 rounded-lg bg-veryLightGray p-6 md:w-1/3"
+            >
+              <img
+                src="./img/avatar-richard.png"
+                class="-mt-14 w-16"
+                alt="anisha"
+              />
+              <h5 class="text-lg font-bold capitalize">richard watts</h5>
+              <p class="text-sm text-darkGrayishBlue">
+                “Manage has supercharged our team’s workflow. The ability to
+                maintain visibility on larger milestones at all times keeps
+                everyone motivated.”
+              </p>
+            </div>
+          </div>
+          <div class="my-16">
+            <a
+              href="#"
+              class="rounded-full bg-brightRed p-3 px-6 py-2 text-white hover:bg-brightRedLight"
+            >
+              Get Started
+            </a>
           </div>
         </div>
       </section>
