--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
       <section id="hero">
         <!-- Flex Container -->
         <div
-          class="container mx-auto mt-10 flex flex-col-reverse items-center space-y-0 px-6 md:flex-row md:space-y-8"
+          class="container mx-auto mt-10 flex flex-col-reverse items-center space-y-0 px-6 md:flex-row md:space-y-0"
         >
           <!-- Left Item -->
           <div class="mb-32 flex flex-col space-y-12 md:w-1/2">
@@ -64,7 +64,7 @@
           </div>
           <!-- Right Item(Image) -->
           <div class="md:w-1/2">
-            <img src="./img/illustration-intro.svg" alt="" srcset="" />
+            <img src="./img/illustration-intro.svg" alt="" />
           </div>
         </div>
       </section>
@@ -245,6 +245,30 @@
             <a
               href="#"
               class="rounded-full bg-brightRed p-3 px-6 py-2 text-white hover:bg-brightRedLight"
+            >
+              Get Started
+            </a>
+          </div>
+        </div>
+      </section>
+
+      <!-- CTA section -->
+      <section id="cta" class="bg-brightRed">
+        <!-- Flex container -->
+        <div
+          class="container mx-auto flex flex-col items-center justify-between space-y-24 px-6 py-24 md:flex-row md:space-y-0 md:py-12"
+        >
+          <!-- Heading -->
+          <h2
+            class="text-center text-5xl font-bold leading-tight text-white md:max-w-xl md:text-left md:text-4xl"
+          >
+            Simplify how your team works today
+          </h2>
+          <!-- Button -->
+          <div>
+            <a
+              href="#"
+              class="rounded-full bg-white p-3 px-6 py-2 text-brightRed shadow-2xl hover:bg-brightRedLight hover:bg-gray-200"
             >
               Get Started
             </a>
