--- a/index.html
+++ b/index.html
@@ -268,13 +268,90 @@
           <div>
             <a
               href="#"
-              class="rounded-full bg-white p-3 px-6 py-2 text-brightRed shadow-2xl hover:bg-brightRedLight hover:bg-gray-200"
+              class="rounded-full bg-white p-3 px-6 py-2 text-brightRed shadow-2xl hover:bg-gray-200"
             >
               Get Started
             </a>
           </div>
         </div>
       </section>
+      <!-- Footer -->
+      <footer class="bg-veryDarkBlue">
+        <!-- Flex Container -->
+        <div
+          class="px- container mx-auto flex flex-col-reverse justify-between space-y-8 px-6 py-10 md:flex-row md:space-y-0"
+        >
+          <!-- Logo and social link contanier -->
+          <div
+            class="flex flex-col-reverse items-center justify-between space-y-12 md:flex-col md:items-start md:space-y-0"
+          >
+            <div class="mx-auto my-6 text-center text-white md:hidden">
+              Copyright &copy; 2022, All Right Reserved
+            </div>
+            <!-- Logo -->
+            <div>
+              <img src="./img/logo-white.svg" class="h-8" alt="" />
+            </div>
+            <!-- social links container -->
+            <div class="flex justify-center space-x-4">
+              <!-- Link 1 -->
+              <a href="#">
+                <img src="./img/icon-facebook.svg" class="h-8" alt="" />
+              </a>
+              <!-- Link 2 -->
+              <a href="#">
+                <img src="./img/icon-youtube.svg" class="h-8" alt="" />
+              </a>
+              <!-- Link 3 -->
+              <a href="#">
+                <img src="./img/icon-twitter.svg" class="h-8" alt="" />
+              </a>
+              <!-- Link 4 -->
+              <a href="#">
+                <img src="./img/icon-pinterest.svg" class="h-8" alt="" />
+              </a>
+              <!-- Link 5 -->
+              <a href="#">
+                <img src="./img/icon-instagram.svg" class="h-8" alt="" />
+              </a>
+            </div>
+          </div>
+          <!-- List container -->
+          <div class="flex justify-around space-x-32">
+            <div class="flex flex-col space-y-3 capitalize text-white">
+              <a href="#" class="hover:text-brightRed">home</a>
+              <a href="#" class="hover:text-brightRed">pricing</a>
+              <a href="#" class="hover:text-brightRed">products</a>
+              <a href="#" class="hover:text-brightRed">about us</a>
+            </div>
+            <div class="flex flex-col space-y-3 capitalize text-white">
+              <a href="#" class="hover:text-brightRed">careers</a>
+              <a href="#" class="hover:text-brightRed">community</a>
+              <a href="#" class="hover:text-brightRed">privacy policy</a>
+            </div>
+          </div>
+          <!-- Input container -->
+          <div class="flex flex-col justify-between">
+            <form action="#">
+              <div class="flex space-x-3">
+                <input
+                  type="text"
+                  class="flex-1 rounded-full px-4 focus:outline-none"
+                  placeholder="Updates in your inbox"
+                />
+                <button
+                  class="rounded-full bg-brightRed px-6 py-2 capitalize text-white hover:bg-brightRedLight focus:outline-none"
+                >
+                  go
+                </button>
+              </div>
+            </form>
+            <div class="hidden text-white md:block">
+              Copyright &copy; 2022, All Right Reserved
+            </div>
+          </div>
+        </div>
+      </footer>
     </main>
   </body>
 </html>
